####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = imagefs
imagefs_SOURCES = tools.cpp rootdirentry.cpp rootdir.cpp fat.cpp imagefs.cpp image.cpp 
imagefs_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = image.cpp image.h imagefs.cpp fat.cpp fat.h rootdir.cpp rootdir.h rootdirentry.cpp rootdirentry.h tools.h tools.cpp defs.h rpm.spec 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = imagefs

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
imagefs_LDFLAGS = $(all_libraries) 
                                                                                
